--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "superagent": "^6.0.0",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vuetify": "^2.2.11"
