--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
+    "serve-mode": "vue-cli-service serve --open --mode",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "favicons-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "superagent": "^6.0.0",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
+    "vue-wechat-title": "^2.0.7",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
