--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hi94740-calendar-feeds-ui",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
@@ -10,10 +11,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "favicons-webpack-plugin": "^4.2.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash-es": "^4.17.15",
-    "superagent": "^6.0.0",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-wechat-title": "^2.0.7",
